.kustomize/base/deployment.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app.kubernetes.io/name: test-quarkus-project
    name: test-quarkus-project
  spec:
    replicas: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: test-quarkus-project
    template:
      metadata:
        labels:
          app.kubernetes.io/name: test-quarkus-project
      spec:
        containers:
          - env:
              - name: KUBERNETES_NAMESPACE
                valueFrom:
                  fieldRef:
                    fieldPath: metadata.namespace
              - name: JAVA_APP_JAR
                value: /deployments/quarkus-run.jar
            image: quay.io/jmayorgarh/test-quarkus-project:latest
            imagePullPolicy: Always
            livenessProbe:
              failureThreshold: 3
              httpGet:
                path: /q/health/live
                port: 8080
                scheme: HTTP
              initialDelaySeconds: 5
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 10
            name: test-quarkus-project
            ports:
              - containerPort: 8080
                name: http
                protocol: TCP
            readinessProbe:
              failureThreshold: 3
              httpGet:
                path: /q/health/ready
                port: 8080
                scheme: HTTP
              initialDelaySeconds: 5
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 10
            resources:
              limits:
                cpu: "250m"
                memory: "128Mi"
              requests:
                cpu: "250m"
                memory: "128Mi"
