.kustomize/base/service.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app.kubernetes.io/name: test-quarkus-project
    name: test-quarkus-project
  spec:
    ports:
      - name: http
        port: 80
        protocol: TCP
        targetPort: 8080
    selector:
      app.kubernetes.io/name: test-quarkus-project
    type: ClusterIP
