.kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: test-quarkus-project
  name: test-quarkus-project
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: test-quarkus-project
